[package]
name = "extractor"
version = "0.1.0"
edition = "2024"

[dependencies]
repository = { workspace = true }
llm = { workspace = true, features = ["gemini"] }

tokio = { version = "1.48.0", features = ["full"] }

tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
